--- a/stad_gent/main.css
+++ b/stad_gent/main.css
@@ -5,7 +5,17 @@ body {
     background-color: #f2f2f2;
     color: #333;
     line-height: 1.6; /* added line height for better readability */
+ text-align: center;
 }
+
+#map { 
+    height: 400px;
+    width: 100%;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+ }
 
 .parking {
     display: inline-block; /* added display: inline-block */
@@ -14,7 +24,7 @@ body {
     margin: 10px;
     background-color: #fff;
     margin-bottom: 10px;
-    border-radius: 5px;
+    border-radius: .75rem;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
     transition: box-shadow 0.3s ease; /* added transition for smooth hover effect */
     vertical-align: top; /* added vertical-align: top */
